bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:2: error: missing argument list for method || in class Boolean
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `$bar$bar _` or `$bar$bar(_)` instead of `$bar$bar`.
  if (Math.abs(100 - n) <= 10 || Math.abs(200 - n) <= 10 ||)
                                                         ^